# probity

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
.github/: pull_request_template.md
config/: primary_sources.yaml
docs/: backtest.md  db.md  forecast.md  guardrails.md  runbook.md  selector.md
migrations/: README  env.py
schemas/: claim_extract.v1.json  evidence_checklist.v1.json
scripts/: verify.py  wss_probe.py
tests/: db_helpers.py  test_asof_contract.py  test_audit_bundle_artifact_schema.py  test_audit_bundle_hashing_determinism.py  test_audit_bundle_job_smoke.py  test_backtest_asof_integration.py  test_backtest_metrics.py  test_calibration_isotonic_platt_switch.py  test_claim_extractor_runner.py  test_claim_graph.py  test_claim_schemas.py  test_clob_client.py  test_clob_ingest_rest_job.py  test_clob_repository_integration.py  test_clob_wss_client.py  test_clob_wss_listener_integration.py  test_clob_wss_listener_job.py  test_conformal_intervals_deterministic.py  test_decide_from_forecast_job.py  test_decision_artifact_schema.py  test_decision_policy.py  test_deep_score_determinism.py  test_driver_extraction_deterministic.py  test_eval_selector_integration.py  test_execute_trade_plan_stub_job.py  test_execution_artifact_schema.py  test_execution_hashing_determinism.py  test_execution_policy_behavior.py  test_forecast_artifact_schema.py  test_forecast_baseline_ensemble_integration.py  test_forecast_calibration_report.py  test_gamma_client.py  (+55 more)
(+164 files in other folders)
