[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pmx"
version = "0.1.0"
description = "Research-grade scaffold for probabilistic market forecasting."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pyyaml>=6.0.2",
  "psycopg[binary]>=3.2.3",
  "requests>=2.32.3",
  "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
  "alembic>=1.13.2",
  "mypy>=1.11.0",
  "pre-commit>=3.8.0",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.2",
  "sqlalchemy>=2.0.36",
  "types-requests>=2.32.0.20241016",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pmx"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "RUF", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = true
warn_unused_configs = true
pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["tests.*"]
allow_untyped_defs = true
allow_untyped_calls = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src/pmx --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/pmx"]
